--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js",
+    "start": "nodemon --exec babel-node src/index",
     "dev": "nodemon server.js",
+    "build": "babel api --out-dir dist",
     "knex": "knex"
   },
   "keywords": [
@@ -17,16 +18,21 @@
   "author": "Mahmut Can Kahya",
   "license": "ISC",
   "dependencies": {
+    "@babel/node": "^7.8.7",
+    "@babel/polyfill": "^7.8.7",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.20.11",
     "morgan": "^1.9.1",
     "pg": "^7.18.2",
+    "sequelize": "^5.21.5",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "nodemon": "^2.0.2",
