--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-
+config/
+src/database/database.js
 # TypeScript v1 declaration files
 typings/
 
