--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "admin",
-    "password": "774516",
+    "username": "postgres",
+    "password": "mahmut7716",
     "database": "yemekoner",
     "host": "127.0.0.1",
     "dialect": "postgres",
